Fix styles on mobile menu

--- a/styles/components/header.css
+++ b/styles/components/header.css
@@ -5,7 +5,8 @@
     padding-top: 2rem;
     padding-bottom: 2rem;
     border: 1px solid red;
-
+    position: relative;
+    z-index: 9999;
 }
 
 .header__menu {
